--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,11 +13,9 @@ jobs:
       packages: write
 
     steps:
-      # Checkout do repo
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Login no GitHub Container Registry (GHCR)
       - name: Login to GHCR
         uses: docker/login-action@v3
         with:
@@ -25,7 +23,6 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_TOKEN }}
 
-      # Build da imagem (CAMINHO CORRETO!)
       - name: Build Docker image
         run: |
           docker build \
@@ -33,8 +30,7 @@ jobs:
             -t ghcr.io/${{ github.repository_owner }}/meu-projeto:${{ github.sha }} \
             meu-projeto-docker/app/
 
-      # Push das imagens
       - name: Push images to GHCR
         run: |
           docker push ghcr.io/${{ github.repository_owner }}/meu-projeto:latest
-          docker push ghcr.io/${{ github.repository_owner }}/meu-projeto:$_
+          docker push "ghcr.io/${{ github.repository_owner }}/meu-projeto:${{ github.sha }}"
